# bits-and-pieces-rs

./: .gitignore  Cargo.toml  README.md
actors/: README.md
actors/act-identifiers/: Cargo.toml
actors/act-identifiers/src/: from_id.rs  lib.rs  msg_id.rs  to_id.rs
actors/act-ids/: Cargo.toml
actors/act-ids/src/: lib.rs
actors/act-system/: Cargo.toml
actors/act-system/src/: actor.rs  bus.rs  ctrl.rs  lib.rs  msg.rs  system.rs
api_gateways/: README.md
api_gateways/api_gtw_hyper/: Cargo.toml  config.yaml
api_gateways/api_gtw_hyper/src/: config.rs  lib.rs  main.rs  svc.rs
api_gateways/learn_tower/: Cargo.toml  README.md
api_gateways/learn_tower/src/: main.rs
api_gateways/websockets/: README.md
api_gateways/websockets/ws_client/: Cargo.toml
api_gateways/websockets/ws_server/: Cargo.toml
api_gateways/websockets/ws_server/src/: main.rs
benchmarking/bm-criterion/: Cargo.toml  README.md
benchmarking/bm-criterion/benches/: my_benchmark.rs
cert-generator/: Cargo.toml  README.md
cert-generator/src/: lib.rs
concurrent/: README.md
concurrent/crossbeam-array-queue/: Cargo.toml
concurrent/crossbeam-array-queue/src/: main.rs
concurrent/crossbeam-atomic-cell/: Cargo.toml
concurrent/crossbeam-atomic-cell/src/: main.rs
concurrent/crossbeam-channels/: Cargo.toml
concurrent/crossbeam-channels/src/: main.rs
concurrent/crossbeam-wait-group/: Cargo.toml
concurrent/crossbeam-wait-group/src/: main.rs
data_structures/skiplist/: Cargo.toml  README.md
data_structures/skiplist/src/: node.rs
git-hooks/: README.md  pre-commit  pre-commit.sh
github-rs/: Cargo.toml
github-rs/src/: main.rs
grpc/: README.md
grpc/grpc_client/: Cargo.toml
grpc/grpc_client/src/: main.rs
grpc/grpc_server/: Cargo.toml  build.rs
grpc/grpc_server/src/: main.rs
grpc/proto/: hello_world.proto
images/exif/: Cargo.toml
images/exif/src/: main.rs
images/qr/: Cargo.toml
images/qr/src/: main.rs
macros/: README.md
memory_mapped_io/: README.md
memory_mapped_io/mem_concurrent_read/: Cargo.toml
memory_mapped_io/mem_concurrent_read/src/: main.rs
memory_mapped_io/mem_database/: Cargo.toml
memory_mapped_io/mem_database/src/: main.rs
memory_mapped_io/mem_inter_proc_read/: Cargo.toml
memory_mapped_io/mem_inter_proc_read/src/: main.rs
memory_mapped_io/mem_inter_proc_write/: Cargo.toml
memory_mapped_io/mem_inter_proc_write/src/: main.rs
memory_mapped_io/mem_large_write/: Cargo.toml
memory_mapped_io/mem_large_write/src/: main.rs
memory_mapped_io/mem_read_file/: Cargo.toml
memory_mapped_io/mem_read_file/src/: main.rs
memory_mapped_io/mem_realtime_processing/: Cargo.toml
memory_mapped_io/mem_realtime_processing/src/: main.rs
memory_mapped_io/mem_ring_buffer/: Cargo.toml
memory_mapped_io/mem_ring_buffer/src/: main.rs
nom-parser-rs/: Cargo.toml  README.md
nom-parser-rs/src/: main.rs
os/corrode-os/: Cargo.toml  README.md
parsers/calc_parser/: Cargo.toml  build.rs
rust-cow/: Cargo.toml  README.md
rust-cow/src/: main.rs
text-summarizer/: Cargo.toml  README.md
text-summarizer/src/: lib.rs  main.rs
tracing/: README.md
(+3 files in other folders)
