[workspace]
resolver = "2"

members = [
    "memory_mapped_io/mem_inter_proc_write",
    "memory_mapped_io/mem_inter_proc_read",
    "memory_mapped_io/mem_read_file",
    "memory_mapped_io/mem_concurrent_read",
    "memory_mapped_io/mem_large_write",
    "memory_mapped_io/mem_ring_buffer",
    "memory_mapped_io/mem_database",
    "memory_mapped_io/mem_realtime_processing",
    "api_gateways/api_gtw_hyper",
    "data_structures/skiplist",
    "grpc/grpc_server",
    "grpc/grpc_client",
    "actors/act-ids",
    "actors/act-identifiers",
    "actors/act-system",
    "parsers/calc_parser", "text-summarizer", "cert-generator", "api_gateways/learn_tower", "api_gateways/websockets/ws_server", "api_gateways/websockets/ws_client", "concurrent/crossbeam-atomic-cell", "concurrent/crossbeam-array-queue", "concurrent/crossbeam-channels",
]
