[package]
name = "text-summarizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10.1"
ndarray = "0.15.6"

[lib]
name = "text_summarizer"
path = "src/lib.rs"

[[bin]]
name = "ts"
path = "src/main.rs"
