[package]
name = "act-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
act-ids = { path = "./../act-ids" }
act-identifiers = { path = "./../act-identifiers" }
anyhow = "1.0.79"
tokio = { version = "1.23.1", features = ["full"] }
