[package]
name = "api_gtw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.19"
tokio = { version = "1.16.1", features = ["full"] }
http-body-util = "0.1"
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
bytes = "1.5.0"

[lib]
path = "./src/lib.rs"
name = "apigtw_lib"

[[bin]]
path = "./src/main.rs"
name = "apigtw"
