[package]
name = "ws_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = "0.1.3"
tokio = { version = "1", features = ["full"] }
hyper-tungstenite = "0.13.0"
